# opencr-mujoco

./: .flake8  .gitignore  LICENSE  README.md  generate.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  sysid_pipeline.py  teleop.py  viewer.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  nightly-tests.yml  pages.yml
assets/: franka_scene.xml  franka_scene_no_ee.xml
configs/evaluation/: sorosim_dynamics_steel.json  sorosim_dynamics_tpu.json  spring_steel_statics.json  tpu_statics.json
configs/generation/: README.md  example_modular.json  example_modular_tension.json  example_three_segment_franka.json  ftdcr_v4_sysid.json  ftdcr_v4_sysid_0326.json  ftdcr_v4_sysid_tension.json  ftdcr_v6_sysid.json
configs/sysid/: ftdcr_v4_pipeline.json  ftdcr_v6_pipeline.json
configs/teleop/: franka_keyboard_ik.json  franka_tdcr_combined.json  ftdcr_taskspace_position.json  ftdcr_taskspace_tension.json  tdcr_keyboard.json  tdcr_keyboard_modular.json  tdcr_keyboard_modular_tension.json
configs/viewer/: default.json  franka_no_ee.json
data/: README.md
docs/: build_site.py  index.html  manifest.json  serve.py  styles.css
docs/js/: config.js  input.js  mujoco-loader.js  pyodide-bridge.js  viewer.js
docs/pyextra/: web_runtime.py
docs/scenes/: ftdcr_v4_sysid_franka_scene.xml
examples/: trace_tip_demo.py
opencr_mujoco/: __init__.py
opencr_mujoco/controllers/: README.md  __init__.py  combined_controller.py  combined_keyboard_input_mapper.py  dualsense_input_mapper.py  homing.py  ik_controller.py  joint_controller.py  multipt_taskspace_keyboard_mapper.py  tdcr_ik_controller.py  tdcr_joint_controller.py  tdcr_keyboard_input_mapper.py  tdcr_multipt_taskspace_controller.py  tdcr_multipt_tension_controller.py  tdcr_taskspace_keyboard_mapper.py
opencr_mujoco/dynamixel_bridge/: __init__.py  dynamixel_bridge.py  multi_tendon_sync_rw.py  util.py
opencr_mujoco/evaluation/: __init__.py  metrics.py  paper_visualization.py  visualization.py  (+3 more)
paper_results/: README.md  evaluate.py  reproduce_paper_results.py  run_dynamics.py  run_statics.py  visualize_common.py  visualize_dynamics.py  visualize_statics.py  visualize_sysid.py
tests/: README.md  test_main_scripts.py
(+92 files in other folders)
